--- a/src/themes/coreui/web/css/custom.css
+++ b/src/themes/coreui/web/css/custom.css
@@ -13946,7 +13946,7 @@ a.sidebar-header
   text-decoration: none;
 }
 
-.sidebar-narrow-unfoldable .sidebar .sidebar-header .system-title
+.sidebar-narrow-unfoldable .system-title
 {
   display: none;
 }
